fix overflow x

--- a/app/assets/stylesheets/room-col.scss
+++ b/app/assets/stylesheets/room-col.scss
@@ -67,6 +67,7 @@
     height: 100%;
     background-color: #2f3136;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #room-list-show-ul{
