--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -42,6 +42,7 @@
     height: 100%;
     background-color: #2f3136;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #DMText {
